--- a/{{cookiecutter.project_slug}}/.env.sample
+++ b/{{cookiecutter.project_slug}}/.env.sample
@@ -3,13 +3,13 @@ APP_ENV=development
 APP_SECRET_KEY=
 APP_DEBUG={%- if cookiecutter.debug == "yes" -%} True {% else %} False {% endif %}
 APP_READ_DOT_ENV_FILE={%- if cookiecutter.read_dot_env_file == "yes" -%} True {% else %} False {% endif %}
-APP_ALLOWED_HOST=http://localhost:8000
+APP_ALLOWED_HOST=http://localhost
 
 DB_POSTGRESQL={%- if cookiecutter.database == "PostgreSQL" -%} True {% else %} False {% endif %}
-DB_HOST=127.0.0.1
-DB_DATABASE={{ cookiecutter.project_slug }}_db
+DB_HOST=psql
+DB_DATABASE=django_db
 DB_USERNAME=postgres
-DB_PASSWORD=
+DB_PASSWORD=secret
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
@@ -20,6 +20,6 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME=Django
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=redis
+REDIS_PASSWORD=secret
 REDIS_PORT=6379
