--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -1,6 +1,6 @@
 APP_NAME={{ cookiecutter.project_name }}
 APP_ENV=development
-APP_SECRET_KEY=
+APP_SECRET_KEY='!!!SET DJANGO_SECRET_KEY!!!'
 APP_DEBUG={%- if cookiecutter.debug == "yes" -%} True {% else %} False {% endif %}
 APP_READ_DOT_ENV_FILE={%- if cookiecutter.read_dot_env_file == "yes" -%} True {% else %} False {% endif %}
 APP_ALLOWED_HOST=http://localhost
