--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -1,4 +1,4 @@
-APP_NAME={{ cookiecutter.project_name }}
+APP_NAME="{{ cookiecutter.project_name }}"
 APP_ENV=development
 APP_SECRET_KEY='!!!SET DJANGO_SECRET_KEY!!!'
 APP_DEBUG={%- if cookiecutter.debug == "yes" -%} True {% else %} False {% endif %}
