--- a/{{cookiecutter.project_slug}}/.env.sample
+++ b/{{cookiecutter.project_slug}}/.env.sample
@@ -7,6 +7,7 @@ APP_ALLOWED_HOST=http://localhost
 
 DB_POSTGRESQL={%- if cookiecutter.database == "PostgreSQL" -%} True {% else %} False {% endif %}
 DB_HOST=psql
+DB_PORT=5432
 DB_DATABASE=django_db
 DB_USERNAME=postgres
 DB_PASSWORD=secret
