--- a/{{cookiecutter.project_slug}}/.env.sample
+++ b/{{cookiecutter.project_slug}}/.env.sample
@@ -1,16 +1,19 @@
 APP_NAME="{{ cookiecutter.project_name }}"
 APP_ENV=development
-APP_SECRET_KEY='!!!SET DJANGO_SECRET_KEY!!!'
+APP_SECRET_KEY=
 APP_DEBUG={%- if cookiecutter.debug == "yes" -%} True {% else %} False {% endif %}
-APP_READ_DOT_ENV_FILE={%- if cookiecutter.read_dot_env_file == "yes" -%} True {% else %} False {% endif %}
-APP_ALLOWED_HOST=http://localhost
+APP_ALLOWED_HOST="localhost, 127.0.0.1, 0.0.0.0"
 
-DB_POSTGRESQL={%- if cookiecutter.database == "PostgreSQL" -%} True {% else %} False {% endif %}
+DB_POSTGRESQL={%- if cookiecutter.database == "PostgreSQL" -%} psql {% endif %}
 DB_HOST=psql
 DB_PORT=5432
 DB_DATABASE=django_db
 DB_USERNAME=postgres
 DB_PASSWORD=secret
+
+REDIS_HOST=redis
+REDIS_PASSWORD=secret
+REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
@@ -20,7 +23,3 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME=Django
-
-REDIS_HOST=redis
-REDIS_PASSWORD=secret
-REDIS_PORT=6379
