Fixed some minor issues with enviroment variables and style.

--- a/{{cookiecutter.project_slug}}/.env.sample
+++ b/{{cookiecutter.project_slug}}/.env.sample
@@ -4,7 +4,7 @@ APP_SECRET_KEY=
 APP_DEBUG={%- if cookiecutter.debug == "yes" -%} True {% else %} False {% endif %}
 APP_ALLOWED_HOST="localhost, 127.0.0.1, 0.0.0.0"
 
-DB_POSTGRESQL={%- if cookiecutter.database == "PostgreSQL" -%} psql {% endif %}
+DB_ENGINE={%- if cookiecutter.database == "PostgreSQL" -%} psql {% endif %}
 DB_HOST=psql
 DB_PORT=5432
 DB_DATABASE=django_db
